package com.alestrio.isotope.materials;

public class Screw implements Material{

}
