package com.alestrio.isotope;

public
class ControllerLauncher {

}
