@startuml

title __ISOTOPE's Class Diagram__\n

  package com.alestrio.isotope {
    package com.alestrio.isotope.materials {
      abstract class AbsMaterial {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.controllers {
      class ControllerLauncher {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.controllers {
      class ControllerMP {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.controllers {
      class ControllerV {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.materials {
      class Cylinder {
      }
    }
  }
  

  package com.alestrio.isotope {
    class DB {
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      enum DB_TYPE {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      class Database {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      class DbColumn {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      class DbItem {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      class DbItemProperty {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.materials {
      class FilamentSpool {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.ui {
      class GuiLauncher {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.ui {
      class GuiMP {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.ui {
      class GuiV {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      enum PriceCount_type {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.materials {
      class RectangularPiece {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.materials {
      class Screw {
      }
    }
  }
  

  package com.alestrio.isotope {
    class Settings {
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      class XmlHandler {
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      class XmlSettings {
      }
    }
  }
  

  AbsMaterial o-- DB : db
  ControllerLauncher o-- DB : db
  ControllerMP o-- DB : db
  ControllerMP o-- XmlSettings : settings
  ControllerV o-- DB : db
  Cylinder -up-|> AbsMaterial
  DB o-- Settings : s
  Database o-- DB : db
  Database o-- PriceCount_type : pct
  DbColumn o-- DB_TYPE : dbt
  DbItem -up-|> Database
  FilamentSpool -up-|> AbsMaterial
  GuiLauncher -up-|> Application
  GuiMP -up-|> Application
  GuiV -up-|> Application
  RectangularPiece -up-|> AbsMaterial
  Screw -up-|> AbsMaterial
  XmlHandler -up-|> DefaultHandler
  XmlHandler o-- Database : db
  XmlSettings o-- Database : db


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
